--- a/data/1/scss/_variables.scss
+++ b/data/1/scss/_variables.scss
@@ -1,7 +1,3 @@
-body {
-  background: blue;
-}
-.container {
-  background: yellow;
-}
-$body-bg: pink;
+$gray-dark: #aaa;
+$gray: #eee;
+$body-bg: #eee;
