--- a/views/database/edit.hbs
+++ b/views/database/edit.hbs
@@ -2,25 +2,27 @@
     <h3>{{user.name}}</h3>
 </section>
 
-<section>
+<section class="py-1">
     <form action="/database/edit/{{user.$loki}}" method="post">
-        <div>
+        <div class="form-group">
             <label for="name">name</label>
-            <input type="text" name="name" value="{{user.name}}">
+            <input type="text" name="name" value="{{user.name}}" class="form-control">
         </div>
-        <div>
+        <div class="form-group">
             <label for="city">city</label>
-            <input type="text" name="city" value="{{user.city}}">
+            <input type="text" name="city" value="{{user.city}}" class="form-control">
         </div>
-        <div>
+        <div class="form-group">
             <label for="state">state</label>
-            <input type="text" name="state" value="{{user.state}}">
+            <input type="text" name="state" value="{{user.state}}" class="form-control">
         </div>
-        <div>
+        <div class="form-group">
             <label for="zip">zip</label>
-            <input type="text" name="zip" value="{{user.zip}}">
+            <input type="text" name="zip" value="{{user.zip}}" class="form-control">
         </div>
-        <button type="submit">save</button>
+        <button type="submit" class="btn btn-primary">
+            save
+        </button>
 
     </form>
 </section>
