Grouped css data from variables

--- a/data/1/scss/_variables.scss
+++ b/data/1/scss/_variables.scss
@@ -1,3 +1,5 @@
-$gray-dark: #aaa;
-$gray: #eee;
-$body-bg: #eee;
+$gray-dark: #555;
+$gray: #666;
+$spacer: 2rem;
+$body-bg: #EEE;
+$body-color: #666;
