moved to gulp, it works

--- a/data/1/scss/_variables.scss
+++ b/data/1/scss/_variables.scss
@@ -1,5 +1,14 @@
 $gray-dark: #555;
 $gray: #666;
-$spacer: 2rem;
-$body-bg: #EEE;
+$brand-primary: green;
+$brand-success: green;
+$brand-info: green;
+$brand-warning: green;
+$brand-danger: green;
+$brand-inverse: green;
+$enable-shadows: true;
+$body-bg: #AAA;
 $body-color: #666;
+$navbar-padding-x: $spacer*2;
+$navbar-padding-y: $spacer*2;
+$breadcrumb-bg: pink;
