--- a/views/projects/index.hbs
+++ b/views/projects/index.hbs
@@ -4,6 +4,8 @@
 
 <section>
     {{#each projects}}
-        {{name}}
+        <a href="/projects/{{$loki}}">
+            {{name}}
+        </a>
     {{/each}}
 </section>
