--- a/views/layouts/template.hbs
+++ b/views/layouts/template.hbs
@@ -9,7 +9,7 @@
     {{#if cssFile}}
         <link rel="stylesheet" href="{{cssFile}}">
     {{else}}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/index.css">
     {{/if}}
 
     <script src="//code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
@@ -24,13 +24,13 @@
         <div class="container">
             <ul class="nav navbar-nav">
                 <li class="nav-item active">
-                    <a href="/" class="nav-link">HOME</a>
+                    <a href="/" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a href="/about" class="nav-link">ABOUT</a>
+                    <a href="/about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item active">
-                    <a href="/database" class="nav-link">DATABASE</a>
+                    <a href="/projects" class="nav-link">Projects</a>
                 </li>
             </ul>
         </div>
