--- a/views/projects/edit.hbs
+++ b/views/projects/edit.hbs
@@ -1,8 +1,75 @@
-<section class="bg-info py-1 px-1">
-    <h3>{{project.name}}</h3>
-</section>
+<h3 class="bg-info py-1 px-1">{{project.name}}</h3>
 
-<section class="py-3">
+<section class="py-1">
+
+    <h3>Breadcrumb</h3>
+    <nav class="breadcrumb">
+        <a class="breadcrumb-item" href="#">Home</a>
+        <a class="breadcrumb-item" href="#">Library</a>
+        <a class="breadcrumb-item" href="#">Data</a>
+        <span class="breadcrumb-item active">Bootstrap</span>
+    </nav>
+
+    <h3>Buttons</h3>
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-warning">Warning</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-link">Link</button>
+
+    <h3>Cards</h3>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="card">
+                <img class="card-img-top img-fluid" src="https://placekitten.com/600/401" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <img class="card-img-top img-fluid" src="https://placekitten.com/600/401" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <img class="card-img-top img-fluid" src="https://placekitten.com/600/401" alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <h3>Alerts</h3>
+    <div class="alert alert-success alert-dismissible fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+    </div>
+    <div class="alert alert-info" role="alert">
+        <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
+    </div>
+    <div class="alert alert-warning" role="alert">
+        <strong>Warning!</strong> Better check yourself, you're <a href="#" class="alert-link">not looking too good</a>.
+    </div>
+    <div class="alert alert-danger" role="alert">
+        <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+    </div>
+
     <form action="/projects/{{project.$loki}}" method="post">
         <div>
             <textarea name="content" id="content" cols="30" rows="10" class="form-control">{{project.content}}</textarea>
@@ -17,7 +84,7 @@
                 <div class="card">
                     <a data-toggle="collapse" data-parent="#group-list" href="#key-{{@key}}-group" class="card-header" id="key-{{@key}}" style="display: block">
                         <h5 class="mb-0">
-                        {{@key}}
+                            {{@key}}
                         </h5>
                     </a>
                     <div id="key-{{@key}}-group" class="collapse" role="tabpanel" aria-labelledby="key-{{@key}}">
