--- a/views/default.hbs
+++ b/views/default.hbs
@@ -1,19 +1,7 @@
-<section style="text-align:center;">
-    <section>
-        <img src="/public/img/logo-2.png" width="500">
-    </section>
-
-    <section>&nbsp;</section>
+<section class="container py-2">
+    <h1>Lean bootstrap</h1>
 
     <section>
-        Your LEAN Stack (Handlebars) application is running!<br><br>
-        <button class="intro-button" onclick="window.location='/about';">ABOUT SAMPLE</button>
-        <button class="intro-button" onclick="window.location='/database';">DATABASE SAMPLE</button>
-    </section>
-
-    <section>
-        Please help us continue to improve this stack.<br><br>
-        <button class="intro-button" onclick="window.location='https://github.com/wayofthefuture/lean-stack';">GITHUB</button>
-        <button class="intro-button" onclick="window.location='https://github.com/wayofthefuture/lean-stack/fork';">FORK</button>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid assumenda ex magni natus provident. Corporis deleniti error et explicabo iste neque, obcaecati porro quae quam quasi quos similique temporibus totam!
     </section>
 </section>
