--- a/views/projects/edit.hbs
+++ b/views/projects/edit.hbs
@@ -1,7 +1,31 @@
-<h3 class="bg-info py-1 px-1">{{project.name}}</h3>
 
-<section class="py-1">
+<nav class="navbar navbar-light bg-faded navbar-full">
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+    <div class="collapse navbar-toggleable-md" id="navbarResponsive">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <ul class="nav navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="responsiveNavbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu" aria-labelledby="responsiveNavbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
 
+<section class="py-1 container">
     <h3>Breadcrumb</h3>
     <nav class="breadcrumb">
         <a class="breadcrumb-item" href="#">Home</a>
@@ -20,6 +44,7 @@
     <button type="button" class="btn btn-link">Link</button>
 
     <h3>Cards</h3>
+
     <div class="row">
         <div class="col-sm-4">
             <div class="card">
@@ -69,40 +94,4 @@
     <div class="alert alert-danger" role="alert">
         <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
     </div>
-
-    <form action="/projects/{{project.$loki}}" method="post">
-        <div>
-            <textarea name="content" id="content" cols="30" rows="10" class="form-control">{{project.content}}</textarea>
-        </div>
-
-        <button type="submit" class="btn btn-primary">
-            save
-        </button>
-
-        <div id="group-list">
-            {{#each groupData}}
-                <div class="card">
-                    <a data-toggle="collapse" data-parent="#group-list" href="#key-{{@key}}-group" class="card-header" id="key-{{@key}}" style="display: block">
-                        <h5 class="mb-0">
-                            {{@key}}
-                        </h5>
-                    </a>
-                    <div id="key-{{@key}}-group" class="collapse" role="tabpanel" aria-labelledby="key-{{@key}}">
-                        <div class="card-block">
-                            {{#each this}}
-                                <div class="form-group">
-                                    <label for="">{{name}}</label>
-                                    <input type="text" name="field[{{name}}]" value="{{value}}" class="form-control">
-                                </div>
-                            {{/each}}
-                        </div>
-                    </div>
-                </div>
-            {{/each}}
-        </div>
-
-        <button type="submit" class="btn btn-primary">
-            save
-        </button>
-    </form>
 </section>
