moved to vue templates

--- a/views/default.hbs
+++ b/views/default.hbs
@@ -1,7 +1,10 @@
-<section class="container py-2">
-    <h1>Lean bootstrap</h1>
+<br>
+<navbar :items="[{name: 'test'}]">
 
-    <section>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid assumenda ex magni natus provident. Corporis deleniti error et explicabo iste neque, obcaecati porro quae quam quasi quos similique temporibus totam!
-    </section>
-</section>
+</navbar>
+<container>
+    <btn primary>
+        ASDASDS
+    </btn>
+    <btn info></btn>
+</container>
