--- a/views/layouts/template.hbs
+++ b/views/layouts/template.hbs
@@ -11,50 +11,47 @@
 
     <link rel="stylesheet" href="/css/alertify.css">
     <link rel="stylesheet" href="/css/index.css">
-
-    <script src="//code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.3.8/js/tether.min.js" crossorigin="anonymous"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-    <script src="/lib/alertify.min.js"></script>
 </head>
 
 <body>
-<header>
-    <nav class="navbar navbar-light bg-faded">
-        <div class="container">
-            <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
-            <div class="collapse navbar-toggleable-md" id="navbarResponsive">
-                <a class="navbar-brand" href="#">Navbar</a>
+<div>
+    <header>
+        <nav class="navbar navbar-light bg-faded">
+            <div class="container">
+                <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+                <div class="collapse navbar-toggleable-md" id="navbarResponsive">
+                    <a class="navbar-brand" href="#">Navbar</a>
 
-                <ul class="nav navbar-nav">
-                    <li class="nav-item active">
-                        <a href="/" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="/about" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="/projects" class="nav-link">Projects</a>
-                    </li>
-                </ul>
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item active">
+                            <a href="/" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/about" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/projects" class="nav-link">Projects</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
-<section role="main">
-    {{{body}}}
-</section>
+    <section role="main">
+        {{{body}}}
+    </section>
 
-<footer class="navbar navbar-light bg-faded navbar-fixed-bottom">
-    <nav class="container">
-        <ul class="nav navbar-nav">
-            <li class="nav-item active">
-                <a href="/" class="nav-link">Home</a>
-            </li>
-        </ul>
-    </nav>
-</footer>
-
+    <footer class="navbar navbar-light bg-faded navbar-fixed-bottom">
+        <nav class="container">
+            <ul class="nav navbar-nav">
+                <li class="nav-item active">
+                    <a href="/" class="nav-link">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
+</div>
+<script src="js/index.js"></script>
 </body>
 </html>
