--- a/data/1/scss/_variables.scss
+++ b/data/1/scss/_variables.scss
@@ -1,3 +1,13 @@
+$white: #FFF;
+$black: #000;
+$red: #d9534f;
+$orange: #f0ad4e;
+$yellow: #ffd500;
+$green: #5cb85c;
+$blue: #0275d8;
+$teal: #5bc0de;
+$pink: #ff5b77;
+$purple: #613d7c;
 $gray-dark: #666;
 $gray: #666;
 $gray-light: #818a91;
@@ -9,12 +19,11 @@ $brand-info: #5bc0de;
 $brand-warning: #f0ad4e;
 $brand-danger: #d9534f;
 $brand-inverse: $gray-dark;
-$enable-flex: false;
-$enable-rounded: false;
+$enable-rounded: true;
 $enable-shadows: true;
-$enable-gradients: false;
-$enable-transitions: false;
-$enable-hover-media-query: false;
+$enable-gradients: true;
+$enable-transitions: true;
+$enable-hover-media-query: true;
 $enable-grid-classes: true;
 $enable-print-styles: true;
 $spacer: 1rem;
@@ -23,6 +32,8 @@ $spacer-y: $spacer;
 $border-width: 1px;
 $body-bg: #fff;
 $body-color: #666;
+$inverse-bg: $gray-dark;
+$inverse-color: $gray-lighter;
 $link-color: $brand-primary;
 $link-decoration: none;
 $link-hover-color: darken($link-color, 15%);
@@ -33,11 +44,13 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 
 $font-family-serif: Georgia, "Times New Roman", Times, serif;
 $font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base: $font-family-sans-serif;
-$font-size-root: 16px;
 $font-size-base: 1rem;
 $font-size-lg: 1.25rem;
 $font-size-sm: .875rem;
 $font-size-xs: .75rem;
+$font-weight-normal: normal;
+$font-weight-bold: bold;
+$font-weight-base: $font-weight-normal;
 $line-height-base: 2;
 $font-size-h1: 2.5rem;
 $font-size-h2: 2rem;
@@ -45,6 +58,11 @@ $font-size-h3: 1.75rem;
 $font-size-h4: 1.5rem;
 $font-size-h5: 1.25rem;
 $font-size-h6: 1rem;
+$headings-margin-bottom: ($spacer / 2);
+$headings-font-family: inherit;
+$headings-font-weight: 500;
+$headings-line-height: 1.1;
+$headings-color: inherit;
 $display1-size: 6rem;
 $display2-size: 5.5rem;
 $display3-size: 4.5rem;
@@ -53,11 +71,7 @@ $display1-weight: 300;
 $display2-weight: 300;
 $display3-weight: 300;
 $display4-weight: 300;
-$headings-margin-bottom: ($spacer / 2);
-$headings-font-family: inherit;
-$headings-font-weight: 500;
-$headings-line-height: 1.1;
-$headings-color: inherit;
+$display-line-height: $headings-line-height;
 $lead-font-size: 1.25rem;
 $lead-font-weight: 300;
 $small-font-size: 80%;
@@ -82,13 +96,19 @@ $border-radius-sm: .2rem;
 $component-active-color: #fff;
 $component-active-bg: $brand-primary;
 $caret-width: .3em;
-$caret-width-lg: $caret-width;
+$transition-base: all .2s ease-in-out;
+$transition-fade: opacity .15s linear;
+$transition-collapse: height .35s ease;
 $table-cell-padding: .75rem;
 $table-sm-cell-padding: .3rem;
 $table-bg: transparent;
+$table-inverse-bg: $gray-dark;
+$table-inverse-color: $body-bg;
 $table-bg-accent: rgba(0,0,0,.05);
 $table-bg-hover: rgba(0,0,0,.075);
 $table-bg-active: $table-bg-hover;
+$table-head-bg: $gray-lighter;
+$table-head-color: $gray;
 $table-border-width: $border-width;
 $table-border-color: $gray-lighter;
 $btn-padding-x: 1rem;
@@ -96,6 +116,7 @@ $btn-padding-y: .5rem;
 $btn-line-height: 1.25;
 $btn-font-weight: normal;
 $btn-box-shadow: inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075);
+$btn-focus-box-shadow: 0 0 0 2px rgba($brand-primary, .25);
 $btn-active-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
 $btn-primary-color: #fff;
 $btn-primary-bg: $brand-primary;
@@ -125,6 +146,7 @@ $btn-toolbar-margin: .5rem;
 $btn-border-radius: $border-radius;
 $btn-border-radius-lg: $border-radius-lg;
 $btn-border-radius-sm: $border-radius-sm;
+$btn-transition: all .2s ease-in-out;
 $input-padding-x: .75rem;
 $input-padding-y: .5rem;
 $input-line-height: 1.25;
@@ -149,6 +171,14 @@ $input-padding-y-lg: .75rem;
 $input-height: (($font-size-base * $line-height-base) + ($input-padding-y * 2));
 $input-height-lg: (($font-size-lg * $line-height-lg) + ($input-padding-y-lg * 2));
 $input-height-sm: (($font-size-sm * $line-height-sm) + ($input-padding-y-sm * 2));
+$input-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+$form-text-margin-top: .25rem;
+$form-feedback-margin-top: $form-text-margin-top;
+$form-check-margin-bottom: .5rem;
+$form-check-input-gutter: 1.25rem;
+$form-check-input-margin-y: .25rem;
+$form-check-input-margin-x: .25rem;
+$form-check-inline-margin-x: .75rem;
 $form-group-margin-bottom: $spacer-y;
 $input-group-addon-bg: $gray-lighter;
 $input-group-addon-border-color: $input-border-color;
@@ -157,6 +187,7 @@ $custom-control-gutter: 1.5rem;
 $custom-control-spacer-x: 1rem;
 $custom-control-spacer-y: .25rem;
 $custom-control-indicator-size: 1rem;
+$custom-control-indicator-margin-y: (($line-height-base * 1rem) - $custom-control-indicator-size) / -2;
 $custom-control-indicator-bg: #ddd;
 $custom-control-indicator-bg-size: 50% 50%;
 $custom-control-indicator-box-shadow: inset 0 .25rem .25rem rgba(0,0,0,.1);
@@ -178,6 +209,7 @@ $custom-radio-radius: 50%;
 $custom-select-padding-x: .75rem;
 $custom-select-padding-y: .375rem;
 $custom-select-indicator-padding: 1rem;
+$custom-select-line-height: $input-line-height;
 $custom-select-color: $input-color;
 $custom-select-disabled-color: $gray-light;
 $custom-select-bg: #fff;
@@ -227,26 +259,25 @@ $dropdown-header-color: $gray-light;
 $zindex-dropdown-backdrop: 990;
 $zindex-navbar: 1000;
 $zindex-dropdown: 1000;
+$zindex-fixed: 1030;
+$zindex-sticky: 1030;
+$zindex-modal-backdrop: 1040;
+$zindex-modal: 1050;
 $zindex-popover: 1060;
 $zindex-tooltip: 1070;
-$zindex-navbar-fixed: 1030;
-$zindex-navbar-sticky: 1030;
-$zindex-modal-bg: 1040;
-$zindex-modal: 1050;
 $navbar-border-radius: $border-radius;
-$navbar-padding-x: $spacer*2;
-$navbar-padding-y: $spacer*2;
+$navbar-padding-x: $spacer;
+$navbar-padding-y: $spacer;
 $navbar-brand-padding-y: .25rem;
-$navbar-divider-padding-y: .425rem;
 $navbar-toggler-padding-x: .75rem;
 $navbar-toggler-padding-y: .5rem;
 $navbar-toggler-font-size: $font-size-lg;
 $navbar-toggler-border-radius: $btn-border-radius;
-$navbar-dark-color: rgba(255,255,255,.5);
-$navbar-dark-hover-color: rgba(255,255,255,.75);
-$navbar-dark-active-color: rgba(255,255,255,1);
-$navbar-dark-disabled-color: rgba(255,255,255,.25);
-$navbar-dark-toggler-border: rgba(255,255,255,.1);
+$navbar-inverse-color: rgba($white,.5);
+$navbar-inverse-hover-color: rgba($white,.75);
+$navbar-inverse-active-color: rgba($white,1);
+$navbar-inverse-disabled-color: rgba($white,.25);
+$navbar-inverse-toggler-border: rgba($white,.1);
 $navbar-light-color: rgba(0,0,0,.5);
 $navbar-light-hover-color: rgba(0,0,0,.7);
 $navbar-light-active-color: rgba(0,0,0,.9);
@@ -257,9 +288,7 @@ $nav-item-inline-spacer: 1rem;
 $nav-link-padding: .5em 1em;
 $nav-link-hover-bg: $gray-lighter;
 $nav-disabled-link-color: $gray-light;
-$nav-disabled-link-hover-color: $gray-light;
-$nav-disabled-link-hover-bg: transparent;
-$nav-tabs-border-color: #ddd;
+$nav-tabs-border-color: #666;
 $nav-tabs-border-width: $border-width;
 $nav-tabs-border-radius: $border-radius;
 $nav-tabs-link-hover-border-color: $gray-lighter;
@@ -277,6 +306,7 @@ $pagination-padding-x-sm: .75rem;
 $pagination-padding-y-sm: .275rem;
 $pagination-padding-x-lg: 1.5rem;
 $pagination-padding-y-lg: .75rem;
+$pagination-line-height: 1.25;
 $pagination-color: $link-color;
 $pagination-bg: #fff;
 $pagination-border-width: $border-width;
@@ -316,7 +346,9 @@ $card-bg: #fff;
 $card-link-hover-color: #fff;
 $card-img-overlay-padding: 1.25rem;
 $card-deck-margin: .625rem;
-$card-columns-sm-up-column-gap: 1.25rem;
+$card-columns-count: 3;
+$card-columns-gap: 1.25rem;
+$card-columns-margin: $card-spacer-y;
 $tooltip-max-width: 200px;
 $tooltip-color: #fff;
 $tooltip-bg: #000;
@@ -341,24 +373,23 @@ $popover-arrow-width: 10px;
 $popover-arrow-color: $popover-bg;
 $popover-arrow-outer-width: ($popover-arrow-width + 1px);
 $popover-arrow-outer-color: fade-in($popover-border-color, .05);
-$tag-default-bg: $gray-light;
-$tag-primary-bg: $brand-primary;
-$tag-success-bg: $brand-success;
-$tag-info-bg: $brand-info;
-$tag-warning-bg: $brand-warning;
-$tag-danger-bg: $brand-danger;
-$tag-color: #fff;
-$tag-link-hover-color: #fff;
-$tag-font-size: 75%;
-$tag-font-weight: bold;
-$tag-padding-x: .4em;
-$tag-padding-y: .25em;
-$tag-pill-padding-x: .6em;
-$tag-pill-border-radius: 10rem;
+$badge-default-bg: $gray-light;
+$badge-primary-bg: $brand-primary;
+$badge-success-bg: $brand-success;
+$badge-info-bg: $brand-info;
+$badge-warning-bg: $brand-warning;
+$badge-danger-bg: $brand-danger;
+$badge-color: $white;
+$badge-link-hover-color: $white;
+$badge-font-size: 75%;
+$badge-font-weight: $font-weight-bold;
+$badge-padding-x: .4em;
+$badge-padding-y: .25em;
+$badge-pill-padding-x: .6em;
+$badge-pill-border-radius: 10rem;
 $modal-inner-padding: 15px;
 $modal-dialog-margin: 10px;
 $modal-dialog-sm-up-margin-y: 30px;
-$modal-title-padding: 15px;
 $modal-title-line-height: $line-height-base;
 $modal-content-bg: #fff;
 $modal-content-border-color: rgba(0,0,0,.2);
@@ -371,11 +402,14 @@ $modal-header-border-color: #e5e5e5;
 $modal-footer-border-color: $modal-header-border-color;
 $modal-header-border-width: $modal-content-border-width;
 $modal-footer-border-width: $modal-header-border-width;
+$modal-header-padding: 15px;
 $modal-lg: 900px;
 $modal-md: 600px;
 $modal-sm: 300px;
+$modal-transition: transform .3s ease-out;
 $alert-padding-x: 1.25rem;
 $alert-padding-y: .75rem;
+$alert-margin-bottom: $spacer-y;
 $alert-border-radius: $border-radius;
 $alert-link-font-weight: bold;
 $alert-border-width: $border-width;
@@ -391,19 +425,21 @@ $alert-warning-border: $state-warning-border;
 $alert-danger-bg: $state-danger-bg;
 $alert-danger-text: $state-danger-text;
 $alert-danger-border: $state-danger-border;
+$progress-height: 1rem;
+$progress-font-size: .75rem;
 $progress-bg: #eee;
-$progress-bar-color: #0074d9;
 $progress-border-radius: $border-radius;
 $progress-box-shadow: inset 0 .1rem .1rem rgba(0,0,0,.1);
+$progress-bar-color: #0074d9;
 $progress-bar-bg: $brand-primary;
-$progress-bar-success-bg: $brand-success;
-$progress-bar-warning-bg: $brand-warning;
-$progress-bar-danger-bg: $brand-danger;
-$progress-bar-info-bg: $brand-info;
+$progress-bar-animation-timing: 1s linear infinite;
+$list-group-color: $body-color;
 $list-group-bg: #fff;
 $list-group-border-color: #ddd;
 $list-group-border-width: $border-width;
 $list-group-border-radius: $border-radius;
+$list-group-item-padding-x: 1.25rem;
+$list-group-item-padding-y: .75rem;
 $list-group-hover-bg: #f5f5f5;
 $list-group-active-color: $component-active-color;
 $list-group-active-bg: $component-active-bg;
@@ -413,18 +449,19 @@ $list-group-disabled-color: $gray-light;
 $list-group-disabled-bg: $gray-lighter;
 $list-group-disabled-text-color: $list-group-disabled-color;
 $list-group-link-color: #555;
-$list-group-link-hover-color: $list-group-link-color;
 $list-group-link-heading-color: #333;
-$list-group-item-padding-x: 1.25rem;
-$list-group-item-padding-y: .75rem;
-$list-group-item-heading-margin-bottom: 5px;
+$list-group-link-hover-color: $list-group-link-color;
+$list-group-link-active-color: $list-group-color;
+$list-group-link-active-bg: $gray-lighter;
 $thumbnail-padding: .25rem;
 $thumbnail-bg: $body-bg;
 $thumbnail-border-width: $border-width;
 $thumbnail-border-color: #ddd;
 $thumbnail-border-radius: $border-radius;
 $thumbnail-box-shadow: 0 1px 2px rgba(0,0,0,.075);
+$thumbnail-transition: all .2s ease-in-out;
 $figure-caption-font-size: 90%;
+$figure-caption-color: $gray-light;
 $breadcrumb-padding-y: .75rem;
 $breadcrumb-padding-x: 1rem;
 $breadcrumb-item-padding: .5rem;
@@ -432,24 +469,18 @@ $breadcrumb-bg: pink;
 $breadcrumb-divider-color: $gray-light;
 $breadcrumb-active-color: $gray-light;
 $breadcrumb-divider: "/";
-$media-margin-top: 15px;
-$media-heading-margin-bottom: 5px;
-$media-alignment-padding-x: 10px;
-$carousel-text-shadow: 0 1px 2px rgba(0,0,0,.6);
 $carousel-control-color: #fff;
 $carousel-control-width: 15%;
-$carousel-control-sm-up-size: 30px;
 $carousel-control-opacity: .5;
-$carousel-control-font-size: 20px;
-$carousel-indicators-width: 60%;
-$carousel-indicator-size: 10px;
-$carousel-indicator-active-size: 12px;
+$carousel-indicator-width: 30px;
+$carousel-indicator-height: 3px;
+$carousel-indicator-spacer: 3px;
 $carousel-indicator-active-bg: #fff;
-$carousel-indicator-border-color: #fff;
 $carousel-caption-width: 70%;
-$carousel-caption-sm-up-width: 60%;
 $carousel-caption-color: #fff;
-$carousel-icon-width: 20px;
+$carousel-control-icon-width: 20px;
+$carousel-transition: transform .6s ease-in-out;
+$close-font-size: $font-size-base * 1.5;
 $close-font-weight: bold;
 $close-color: #000;
 $close-text-shadow: 0 1px 0 #fff;
