--- a/views/layouts/project.hbs
+++ b/views/layouts/project.hbs
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/projects/{{project.uuid}}/carousel">Carousel</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/projects/{{project.uuid}}/form">Forms</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="http://example.com" id="responsiveNavbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
