--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8332,3 +8332,6 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
     .projects .iframe .iframe-container iframe {
       width: 100%;
       height: 100%; }
+
+.navbar-brand img {
+  max-height: 28px; }
