--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,5 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome/scss/font-awesome";
+@import "highlight.js/styles/dracula";
 @import "projects";
 @import "navbar";
