lowercase search, typography

--- a/server/views/layouts/project.hbs
+++ b/server/views/layouts/project.hbs
@@ -31,9 +31,9 @@
                 <a class="nav-link" href="/projects/{{project.uuid}}/form">Forms</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="responsiveNavbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="responsiveNavbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown-content" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-content">
+                    <a class="dropdown-item" href="/projects/{{project.uuid}}/typography">Typography</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
