--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome/scss/font-awesome";
 @import "highlight.js/styles/dracula";
+@import "toastr/toastr";
 @import "projects";
 @import "navbar";
