--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -7,6 +7,7 @@
     padding: $spacer;
     overflow: auto;
     background: rgba(0, 0, 0, .8);
+    color: $gray-lightest;
     .project-settings-data {
       display: none;
     }
@@ -38,6 +39,7 @@
       position: relative;
       width: 300px;
       height: calc(100vh - 56px);
+      color: inherit;
       .project-settings-data {
         display: block;
       }
