Upgraded bootstrp 4 beta

--- a/server/views/projects/pages/home.hbs
+++ b/server/views/projects/pages/home.hbs
@@ -1,70 +1,40 @@
-<section class="py-1 container">
-    <h1>Home</h1>
-    <nav class="breadcrumb">
-        <a class="breadcrumb-item" href="#">Home</a>
-        <a class="breadcrumb-item" href="#">Library</a>
-        <a class="breadcrumb-item" href="#">Data</a>
-        <span class="breadcrumb-item active">Bootstrap</span>
-    </nav>
-
-    <h3>Buttons</h3>
-    <a href="#" class="btn btn-primary">Primary</a>
-    <a href="#" class="btn btn-secondary">Secondary</a>
-    <a href="#" class="btn btn-success">Success</a>
-    <a href="#" class="btn btn-info">Info</a>
-    <a href="#" class="btn btn-warning">Warning</a>
-    <a href="#" class="btn btn-danger">Danger</a>
-    <a href="#" class="btn btn-link">Link</a>
-
-    <h3>Cards</h3>
-
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="card">
-                <img class="card-img-top img-fluid" src="https://placekitten.com/600/401" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="card">
-                <img class="card-img-top img-fluid" src="https://placekitten.com/600/401" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="card">
-                <img class="card-img-top img-fluid" src="https://placekitten.com/600/401" alt="Card image cap">
-                <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
+<section class="py-3 container">
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to the playground!</h1>
+        <p class="lead">
+            Oh Hi! Didn't see you there. Welcome to the playground. Here you can play with bootstrap.
+            Here, above this <strong>jumbotron</strong> we have a menu (<strong>navbar</strong>). You can click around to all the bootstrap elements we have set up.
+        </p>
+        <p>Now it is up to you, lets explain!</p>
+        <a href="#variables" class="btn btn-primary btn-lg">Lets go!</a> (this will just scoll you down &#128512;)
     </div>
-
-    <h3>Alerts</h3>
-    <div class="alert alert-success alert-dismissible fade in" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
-    </div>
-    <div class="alert alert-info" role="alert">
-        <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
-    </div>
-    <div class="alert alert-warning" role="alert">
-        <strong>Warning!</strong> Better check yourself, you're <a href="#" class="alert-link">not looking too good</a>.
-    </div>
-    <div class="alert alert-danger" role="alert">
-        <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+    <div id="variables">
+        <h3>Variables</h3>
+        <p>
+            So on a desktop you have a list of <strong>variables</strong>, when on mobile just hit the <strong>variables</strong>.
+        </p>
+        <p class="lead">Much variables!</p>
+        <p>
+            So you have lost your ways here, cool but that doesn't matter. We will highlight some object you can check in titles and <strong>bold</strong> texts!
+            Like that <strong>jumbotron</strong> above.
+        </p>
+        <h4>Try!</h4>
+        <p>
+            In the filter, type in "jumbotron". Here you have some variables you can use in the scss of bootstrap, just change them.
+        </p>
+        <h4>Error!</h4>
+        <p>
+            If you types something wrong, we don't have checks on the fields, we will show an error message on the bottom.
+            If you don't know what you did wrong, just reload. It will reload to the last time it did it right.
+        </p>
+        <h4>Enjoy!</h4>
+        <p>
+            And if you hit the code icon above this frame, you can just check all the variables. The ones commented with // altered ....
+            you altered and can use in your own projects!
+        </p>
+        <p class="lead">
+            Now just play, and have fun.
+        </p>
+        <br><br><br><br>
     </div>
 </section>
