--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -7,7 +7,7 @@
     padding: $spacer;
     overflow: auto;
     background: rgba(0, 0, 0, .8);
-    color: $gray-lightest;
+    color: $gray-200;
     .project-settings-data {
       display: none;
     }
@@ -34,7 +34,7 @@
       padding: 0 $spacer;
     }
     .projects-settings {
-      background: $gray-lightest;
+      background: $gray-200;
       display: block;
       position: relative;
       width: 300px;
