--- a/server/views/layouts/project.hbs
+++ b/server/views/layouts/project.hbs
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/projects/{{project.uuid}}/home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/projects/{{project.uuid}}/carousel">Carousel</a>
+                    <a class="nav-link" href="/projects/{{project.uuid}}/colors">Colors</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/projects/{{project.uuid}}/form">Forms</a>
@@ -35,7 +35,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdown-content">
                         <a class="dropdown-item" href="/projects/{{project.uuid}}/typography">Typography</a>
                         <a class="dropdown-item" href="/projects/{{project.uuid}}/cards">Cards</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="/projects/{{project.uuid}}/carousel">Carousel</a>
                     </div>
                 </li>
             </ul>
